# aladdin-project-tools

./: .gitignore  pyproject.toml
aladdin_project_tools/commands/: __init__.py  components.py  docs.py
aladdin_project_tools/etc/: component_schema.json  sample_compatible_component.yaml  sample_component.yaml  sample_standard_component.yaml
docs/: Dockerfile
docs/built/: .buildinfo  changelog.html  development.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/built/.doctrees/: changelog.doctree  development.doctree  index.doctree
docs/built/.doctrees/autoapi/aladdin_project_tools/: index.doctree
docs/built/.doctrees/autoapi/aladdin_project_tools/commands/: index.doctree
docs/built/.doctrees/code/: index.doctree
docs/built/_modules/: aladdin_project_tools.html  index.html
docs/built/_modules/aladdin_project_tools/: commands.html
docs/built/_modules/aladdin_project_tools/commands/: components.html  docs.html
docs/built/_sources/: changelog.rst.txt  index.rst.txt
docs/built/_sources/autoapi/aladdin_project_tools/: index.rst.txt
docs/built/_sources/autoapi/aladdin_project_tools/commands/: index.rst.txt
docs/built/_sources/code/: index.rst.txt
docs/built/_static/: style.css
docs/built/autoapi/aladdin_project_tools/: index.html
docs/built/autoapi/aladdin_project_tools/commands/: index.html
docs/built/code/: index.html
docs/source/: conf.py  development.rst  index.rst
docs/source/tmp/: components.dot
tests/: test_aladdin_project_tools.py
(+6 files in other folders)
